force-app/main/default/objects/Time__c/Time__c.object-meta.xml
<CustomObject>
    <description>Time can be associated to projects, and cases (optional).</description>
    <label>Time</label>
    <nameField>
        <displayFormat>{MM}{DD}{YYYY}-{0}</displayFormat>
        <label>Timeline Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>