force-app/main/default/objects/Time__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>R00N50000001RH0YEAW</relationshipName>
    <type>Lookup</type>
</CustomField>