force-app/main/default/objects/Time__c/fields/Date_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Date_Invoiced__c</fullName>
    <label>Date Invoiced</label>
    <type>Date</type>
</CustomField>