force-app/main/default/objects/Time__c/fields/Pay_Code__c.field-meta.xml
<CustomField>
    <fullName>Pay_Code__c</fullName>
    <label>Pay Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
                <default>true</default>
                <label>Regular</label>
            </value>
            <value>
                <fullName>Overtime</fullName>
            </value>
            <value>
                <fullName>Paid Time Off</fullName>
            </value>
            <value>
                <fullName>Company Holiday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>