force-app/main/default/objects/Time__c/fields/SFDC_Projects__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Projects__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Projects__c</referenceTo>
    <relationshipName>R00N50000001RH3hEAG</relationshipName>
    <type>Lookup</type>
</CustomField>