force-app/main/default/objects/Time__c/fields/SFDC_Resource__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipName>R00N50000001RH3WEAW</relationshipName>
    <type>Lookup</type>
</CustomField>