force-app/main/default/objects/Time__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>SFDC_Resource__c</columns>
    <columns>Pay_Code__c</columns>
    <columns>SFDC_Projects__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>